# PngToAlfaMask

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  PngToAlfaMask.sln  README.md  Release.rar  sfml.rar
PngToAlfaMask/: Amask.cpp  Amask.h  MyImage.cpp  MyImage.h  Paths.cpp  PngToAlfaMask.cpp  PngToAlfaMask.vcxproj  PngToAlfaMask.vcxproj.filters  paths.h
src/: Main.cpp
src/Amask/: Amask.cpp  CMakeLists.txt  CmakeLists.txt
src/Amask/include/: Amask.h
src/CompressedMem/: CMakeLists.txt  CmakeLists.txt  CompressedMem.cpp
src/Convert/: CMakeLists.txt  CmakeLists.txt  Convert.cpp
src/Convert/include/: Convert.h
src/MyImage/: CMakeLists.txt  CmakeLists.txt  MyImage.cpp
src/MyImage/include/: MyImage.h
src/Pat/: CMakeLists.txt  CmakeLists.txt  Pat.cpp
src/Pat/include/: paths.h
src/StringHelp/: CMakeLists.txt  CmakeLists.txt  StringHelp.cpp
src/StringHelp/include/: StringHelp.h
src/include/: Amask.h  CompressedMem.h  Convert.h  MyImage.h  arch.h  paths.h
x64/Release/: PngToAlfaMask.iobj  PngToAlfaMask.ipdb
